# SunWhysEngine

./: .gitignore  CMakeLists.txt  README.md  env.sh
3rd/: HunterGate.cmake
src/: Main.cpp  SunWhysEngine.cpp  SunWhysEngine.h
src/Behaviors/: Behavior.cpp  Behavior.h
src/Physics/: Physics.cpp  Physics.h
src/Sprites/: Sprites.cpp  Sprites.h
src/States/: GameManager.cpp  GameManager.h  State.cpp  State.h
src/Wrappers/: LuaWrappers.cpp  LuaWrappers.h
